--- a/src/pages/InputPage.css
+++ b/src/pages/InputPage.css
@@ -1,22 +1,28 @@
 .popup-card {
-    width: 350px;
-    background-color: #f7e5d8;
-    padding: 20px 35px 35px;
-    border-radius: 16px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
+  width: 350px;
+  background-color: #f7e5d8;
+  padding: 10px 35px 35px;
+  border-radius: 16px;
+  text-align: center;
+  height: 410.35px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
   
-  .stats-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-bottom: 16px;
+.stats-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 5px;
+  height: 50px;
   }
   
   .cat-sprite {
-    width: 130px;
-    height: 130px;
+    margin-top: auto;
+    width: 110px;
+    height: 110px;
     margin: 0 auto 16px;
   }
   
@@ -24,7 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 12px;
+    gap: 5px;
     margin-bottom: 12px;
   }
   
@@ -44,7 +50,7 @@
   
   .input-label {
     display: block;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     margin-bottom: 8px;
   }
@@ -58,12 +64,3 @@
     box-sizing: border-box;
     margin-bottom: 16px;
   }
-  
-  .secondary-button {
-    background: transparent;
-    border: none;
-    color: #333;
-    font-size: 14px;
-    cursor: pointer;
-  }
-  
