--- a/src/pages/StartPage.css
+++ b/src/pages/StartPage.css
@@ -1,5 +1,6 @@
 .popup-card {
     width: 350px;
+    height: 410.35px;
     background-color: #f7e5d8;
     padding: 20px 35px 35px;
     border-radius: 16px;
@@ -21,7 +22,7 @@
     margin-bottom: 16px;
   }
   
-  .secondary-button {
+  .primary-button {
     background-color: #c1a692;
     border: none;
     padding: 10px 20px;
