--- a/src/pages/StorePage.css
+++ b/src/pages/StorePage.css
@@ -1,7 +1,7 @@
 .popup-card {
     position: relative;
     width: 355px;
-    height: 349px;
+    height: 410.35px;
     background-color: #f7e5d8;
     border-radius: 16px;
     padding: 20px;
@@ -31,19 +31,13 @@
     margin-left: 4px;
   }
   
-  .secondary-button {
-    background-color: #6e4f3a;
+  .primary-button {
+    background-color: #c1a692;
     border: none;
-    padding: 6px 14px;
-    border-radius: 12px;
+    padding: 10px 20px;
+    border-radius: 20px;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-    font-size: 13px;
-  }
-  
-  .secondary-button:hover {
-    background-color: #5a3f2c;
   }
   
   .store-item {
@@ -51,6 +45,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+  }
+
+  .store-item:hover {
+    cursor: pointer;
   }
   
   .item-img {
