--- a/src/pages/InputPage.css
+++ b/src/pages/InputPage.css
@@ -20,7 +20,7 @@
   }
   
   .cat-sprite {
-    margin-top: auto;
+    padding-top: 25px;
     width: 110px;
     height: 110px;
     margin: 0 auto 16px;
